# spiralplot

./: .gitignore  README.md  demo.py  push_to_github.bat  pyproject.toml
src/spiralplot/: __init__.py  core.py
