[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spiralplot"
version = "0.1.0"
description = "A spiral plot generator"
authors = [
  { name="Manish Datt", email="manish@bioinfo.guru" },
]
dependencies = [
    "matplotlib",
    "pandas",
    "numpy",
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bioinfoguru/spiralplot"
